--- a/app/views/admin/academy/questions/index.html.erb
+++ b/app/views/admin/academy/questions/index.html.erb
@@ -1,14 +1,27 @@
-<h1>Lista de Perguntas</h1>
 
-<table class="table">
+
+<section class="panel">
+  <header class="panel-heading"><h1>Lista de Perguntas</h1><h5><%= @admin_academy_questions.count %> Perguntas</h5> 
+  <div class="newItemLink">
+<i class="fa fa-plus-circle"></i><%= link_to ' Nova pergunta', new_admin_academy_question_path %>
+  </div>
+  </header>
+
+
+<div class="table-responsive">
+  <table class="table table-hover" >
+      <thead>
   <tr>
     <th>ID</th>
     <th>Pergunta</th>
     <th>ID Autor</th>
     <th>Categoria</th>
+    <th>Respostas</th>
     <th>Criado em</th>
   </tr>
+  </thead>
 
+  <tbody>
   <% @admin_academy_questions.each do |admin_academy_question| %>
 
   <tr>
@@ -27,14 +40,19 @@
       </span>
       <% end %>
     </td>
+    <td><%= admin_academy_question.answers.count %></td>
     <td><%= admin_academy_question.created_at %></td>
     <td><%= link_to 'Ver', admin_academy_question %></td>
     <td><%= link_to 'Editar', edit_admin_academy_question_path(admin_academy_question) %></td>
     <td><%= link_to 'Apagar', admin_academy_question, method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
   </tr>
   <% end %>
+  </tbody>
 </table>
 
-<br>
+</div>
+</section>
 
-<%= link_to 'Nova pergunta', new_admin_academy_question_path %>
+<i class="fa fa-plus-circle"></i><%= link_to ' Nova pergunta', new_admin_academy_question_path %>
+
+
