--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>AgroSocial Admin</title>
-    <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-    
-    <%= javascript_include_tag "application","data-turbolinks-track" => true %>
-    <%= stylesheet_link_tag "application","admin_theme","data-turbolinks-track" => true  %>
+<head>
+  <meta charset="utf-8">
+  <title>AgroSocial Admin</title>
+  <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
 
-    <%= csrf_meta_tags %>
+  <%= javascript_include_tag "application","data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "application","admin_theme","data-turbolinks-track" => true  %>
 
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu|Raleway' rel='stylesheet' type='text/css'>
+  <%= csrf_meta_tags %>
+
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu|Raleway' rel='stylesheet' type='text/css'>
 
   <body class=""> 
     <div id="wrapper">
-    <!-- Sidebar -->
+      <!-- Sidebar -->
       <nav class="navbar navbar-inverse navbar-fixed-top admin-navbar" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -32,153 +32,104 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav side-nav sidebar_nav_admin">
 
-          
+            <li> 
+             <%= link_to "<i class='fa fa-shopping-cart fa-1.2x'></i> Anúncios".html_safe  , admin_ads_path %>
+           </li>
 
-           
-            <a href="#ads_menu" class="nav-header" data-toggle="collapse"><i class="fa fa-shopping-cart"></i> Anúncios</a>
-            <ul id="ads_menu" class="nav nav-list collapse">
-                <li> 
-                 <%= link_to "<i class='fa fa-eye'></i>Anuncios".html_safe  , admin_ads_path %>
-                </li>
-                <li> 
-                 <%= link_to "<i class='fa fa-plus'></i>Novo Anuncio".html_safe  , new_admin_ad_path %>
-                </li>
-            </ul>
+           <li> 
+             <%= link_to "<i class='fa fa-tags'></i> Categorias".html_safe  , admin_categories_path %>
+           </li>
 
-
-            <a href="#Categorias-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-tags"></i> Categorias</a>
-            <ul id="Categorias-menu" class="nav nav-list collapse">
-                <li> 
-                 <%= link_to "<i class='fa fa-eye'></i> Categorias".html_safe  , admin_categories_path %>
-                </li>
-                <li> 
-                 <%= link_to "<i class='fa fa-plus'></i> Nova Categorias".html_safe  , new_admin_category_path %>
-                </li>
-                
-                
-            </ul>
-
-            <a href="#accounts-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-briefcase"></i> Cidades<span class="label label-info">+3</span></a>
-            <ul id="accounts-menu" class="nav nav-list collapse">
-                <li> 
-                 <%= link_to "<i class='fa fa-eye'></i> Cidades".html_safe  , admin_cities_path %>
-                </li>
-                <li> 
-                 <%= link_to "<i class='fa fa-plus'></i> Nova Cidade".html_safe  , new_admin_city_path %>
-                </li>
-            </ul>
+           <li> 
+             <%= link_to "<i class='fa fa-dot-circle-o'></i> Cidades".html_safe  , admin_cities_path %>
+           </li>
 
 
-            <a href="#users-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-eur"></i> Tipos de Preço</a>
-            <ul id="users-menu" class="nav nav-list collapse">
-                <li> 
-                 <%= link_to "<i class='fa fa-eye'></i> Tipos de Preço".html_safe  , admin_price_types_path %>
-                </li>
-                <li> 
-                 <%= link_to "<i class='fa fa-plus'></i> Novo Tipo de Preço".html_safe  , new_admin_price_type_path %>
-                </li>
-            </ul>
 
 
-            <hr>
-            <a href="#price_types-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-users"></i> Utilizadores</a>
-            <ul id="price_types-menu" class="nav nav-list collapse">
-                <li> 
-                 <%= link_to "<i class='fa fa-eye'></i> Utilizadores".html_safe  , admin_users_path %>
-                </li>
-                <li> 
-                 <%= link_to "<i class='fa fa-plus'></i> Novo Utilizador".html_safe  , new_admin_user_path %>
-                </li>
-            </ul>
+         <li> 
+           <%= link_to "<i class='fa fa-calendar'></i> Eventos".html_safe  , admin_event_events_path %>
+         </li>
 
-            <hr>
-        <!--ZONA DA ACADEMIA -->
-                 <a href="#academy-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-book"></i> Academia</a>
-                  <ul id="academy-menu" class="nav nav-list collapse">
-                      <li> 
-                       <%= link_to "<i class='fa fa-eye'></i>Ver tutoriais".html_safe  , admin_academy_tutorials_path %>
-                      </li>
-                      <li> 
-                       <%= link_to "<i class='fa fa-eye'></i>Ver perguntas".html_safe  , admin_academy_questions_path %>
-                      </li>
-                  </ul>
-
-            <hr>
-      <!-- FIM ZONA DA ACADEMIA -->
+          <li> 
+           <%= link_to "<i class='fa fa-question-circle'></i> Perguntas".html_safe  , admin_academy_questions_path %>
+         </li>
+           <li> 
+             <%= link_to "<i class='fa fa-eur'></i> Tipos de Preço".html_safe  , admin_price_types_path %>
+           </li>
 
 
-      <!--ZONA Dos EVENTOS -->
-                 <a href="#events-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-calendar"></i> Eventos</a>
-                  <ul id="events-menu" class="nav nav-list collapse">
-                      <li> 
-                       <%= link_to "<i class='fa fa-eye'></i>Ver Eventos".html_safe  , admin_event_events_path %>
-                      </li>
 
-                      <li> 
-                       <%= link_to "<i class='fa fa-eye'></i>Criar Eventos".html_safe  , new_admin_event_event_path %>
-                      </li>
-                      
-                  </ul>
+           <li> 
+            <%= link_to "<i class='fa fa-book'></i> Tutoriais".html_safe  , admin_academy_tutorials_path %>
+          </li>
 
-            <hr>
-      <!-- FIM ZONA Dos EVENTOS -->
+           <li> 
+             <%= link_to "<i class='fa fa-users'></i> Utilizadores".html_safe  , admin_users_path %>
+           </li>
 
 
-            <a href="/" class="nav-header" >
-                <i class="fa fa-user"></i> User-zone</a>
+         <hr>
+
+         <li>
+          <a href="/" class="nav-header" >
+            <i class="fa fa-user"></i> User-zone</a>
+          </li>
+          <li>
             <a href="" class="nav-header" ><i class="fa fa-comment"></i> Faq</a>
-       </ul>
+          </li>
+        </ul>
 
-          <ul class="nav navbar-nav navbar-right navbar-user">
-            
-            <li class="dropdown alerts-dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> Alerts <span class="badge">3</span> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Default <span class="label label-default">Default</span></a></li>
-                <li><a href="#">Primary <span class="label label-primary">Primary</span></a></li>
-                <li><a href="#">Success <span class="label label-success">Success</span></a></li>
-                <li><a href="#">Info <span class="label label-info">Info</span></a></li>
-                <li><a href="#">Warning <span class="label label-warning">Warning</span></a></li>
-                <li><a href="#">Danger <span class="label label-danger">Danger</span></a></li>
-                <li class="divider"></li>
-                <li><a href="#">View All</a></li>
-              </ul>
-            </li>
-            <li class="dropdown user-dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
-                <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
-                <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
-                <li class="divider"></li>
-                <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </nav>
+        <ul class="nav navbar-nav navbar-right navbar-user">
 
-      <% if flash[:notice] %>
-        <script> showNotify("<%= flash[:notice] %>","success") </script>
-      <% end %>
-      <% if flash[:error] %>
-        <script> showNotify("<%= flash[:error] %>","error") </script>
-      <% end %>
-      <div id="page-wrapper">
+          <li class="dropdown alerts-dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> Alerts <span class="badge">3</span> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Default <span class="label label-default">Default</span></a></li>
+              <li><a href="#">Primary <span class="label label-primary">Primary</span></a></li>
+              <li><a href="#">Success <span class="label label-success">Success</span></a></li>
+              <li><a href="#">Info <span class="label label-info">Info</span></a></li>
+              <li><a href="#">Warning <span class="label label-warning">Warning</span></a></li>
+              <li><a href="#">Danger <span class="label label-danger">Danger</span></a></li>
+              <li class="divider"></li>
+              <li><a href="#">View All</a></li>
+            </ul>
+          </li>
+          <li class="dropdown user-dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
+              <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
+              <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+              <li class="divider"></li>
+              <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </nav>
 
-        <div class="row">
-          <div class="col-lg-12">
-            <%= yield %>
-          </div>
-        </div><!-- /.row -->
+    <% if flash[:notice] %>
+    <script> showNotify("<%= flash[:notice] %>","success") </script>
+    <% end %>
+    <% if flash[:error] %>
+    <script> showNotify("<%= flash[:error] %>","error") </script>
+    <% end %>
+    <div id="page-wrapper">
 
-      </div><!-- /#page-wrapper -->
+      <div class="row">
+        <div class="col-lg-12">
+          <%= yield %>
+        </div>
+      </div><!-- /.row -->
 
-    </div><!-- /#wrapper -->
-    
+    </div><!-- /#page-wrapper -->
 
-    
-  </body>
+  </div><!-- /#wrapper -->
+
+
+
+</body>
 </html>
 
 
