--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -8,12 +8,12 @@
   <table class="table table-hover" >
       <thead>
     <tr>
-      <th>Avatar</th>
       <th>ID</th>
+      <th>Avatar</th>
       <th>Nome</th>
       <th>Email</th>
       <th>Cidade</th>
-      <th>Qt Anúncios</th>
+      <th>Anúncios</th>
       <th>Tipo</th>
       <th></th>
       <th></th>
@@ -24,8 +24,8 @@
   <tbody>
     <% @admin_users.each do |user| %>
       <tr>
-        <td> <%=link_to image_tag(user.avatar.url(:tiny),:class => "img-circle"), user %></td>
         <td><%= user.id %></td>
+        <td> <%=link_to image_tag(user.avatar.url(:tiny),:class => "img-circle"), user %></td>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= user.city.city %></td>
