--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -73,7 +73,7 @@
 
          <li>
           <a href="/" class="nav-header" >
-            <i class="fa fa-user"></i> User-zone</a>
+            <i class="fa fa-reply"></i> User-zone</a>
           </li>
           <li>
             <a href="" class="nav-header" ><i class="fa fa-comment"></i> Faq</a>
@@ -96,7 +96,7 @@
             </ul>
           </li>
           <li class="dropdown user-dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <%= current_user.name %> <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
               <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
