UpdateTutorial[index&&Show]&&HappyNewYearToo

--- a/app/views/academy/tutorials/index.html.erb
+++ b/app/views/academy/tutorials/index.html.erb
@@ -13,32 +13,75 @@
  </ol>
 
 
-  <div class="row ads_index_section">
-    <% @academy_tutorials.each do |academy_tutorial| %>
-      <% if academy_tutorial.aproved? %>
-        <div class="col-sm-3 col-md-4" >
-          <div class="panel">
-             <header class="panel-heading tutorials_thumbnails" style="border-bottom: 2px solid #<%= academy_tutorial.category.color %>;">
-               <div class="pull-right">
-                <% if current_user.id == academy_tutorial.user_id %>
-                  <%= link_to 'Editar', edit_academy_tutorial_path(academy_tutorial),:class => "label pull-right",:style => "background-color:#FFCC91" %>
-                <% end %>
-              </div>
-                <span class="label" style="background-color: #<%= academy_tutorial.category.color %>">
-                 <%= academy_tutorial.category.name %>
-                </span>
+  <div class="row">
+    
+       
+       <div class="panel">
 
-              </header>
-            <div class="panel-body" style="padding:10px;">
-               <div class="caption">
-                <h3><%= academy_tutorial.title %></h3>
-                <p><%= academy_tutorial.rapid_description %></p>
-                <p><i class="fa fa-user"></i> <%= academy_tutorial.user.name %> </p>
-                <%= link_to 'Ver', academy_tutorial,:class => "label pull-right",:style => "background-color:#FFCC91" %>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
+          <table class="table table-hover">
+               <thead>
+                    <tr class="tutorial_table_head">
+                      <th class="tutorial_text_head">Titulo</th>
+                      <th class="tutorial_text_head">Descricao</th>
+                      <th class="tutorial_text_head">Categoria</th>
+                      <th class="tutorial_text_head">Criado em:</th>
+                      <th class="tutorial_text_head">Utilizador</th>
+                      <th class="tutorial_text_head">Opcões</th>
+                    </tr>
+              </thead>
+ 
+              <% @academy_tutorials.each do |academy_tutorial| %>
+              <% if academy_tutorial.aproved? %>
+
+             
+             
+              <tbody>
+
+                
+                <tr class="tutorial_table_body">
+                   <td>
+                       <h3 class="title_tutorial"><%= academy_tutorial.title %></h3>
+                   </td>
+                   <td>
+                       <h4><%= academy_tutorial.rapid_description %></h4>
+                   </td>
+                   <td>
+                      <span class="label" style="background-color: #<%= academy_tutorial.category.color %>">
+                           <%= academy_tutorial.category.name %>
+                      </span>
+                   </td>
+                    <td>
+                     <h4><%= academy_tutorial.created_at %></h4>
+                   </td>
+                    <td>
+                      <span><%= image_tag current_user.avatar.url(:medium), style:"height:35px; " %></span>
+                      <p> <%= academy_tutorial.user.name %> </p>
+                   </td>
+
+                    <td>
+                     <% if current_user.id == academy_tutorial.user_id %>
+                            <%= link_to 'Editar', edit_academy_tutorial_path(academy_tutorial),:class => "label",:style => "background-color:#FFCC91" %>
+                     <% end %>
+                      <%= link_to 'Ver', academy_tutorial,:class => "label",:style => "background-color:#FFCC91" %>
+                   </td>
+
+                 </tr>
+              </tbody>
+
+              <% end %>
+              <% end %>
+         
+
+          </table> 
+
+
+       </div>
+
   </div>
+
+
+
+
+
+
+  
