--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -45,7 +45,7 @@
             <ul>
               <li><%= link_to "Ver Todos".html_safe, event_events_path %></li>
             <% if user_signed_in? %>
-                <li><%= link_to "Os Meus Eventos".html_safe, event_events_path %></li>
+                <li><%= link_to "Os Meus Eventos".html_safe, myevents_path(current_user.id) %></li>
                 <li><%= link_to "Novo Evento".html_safe, new_event_event_path %></li>
             <% end %>
             </ul>
