--- a/app/views/users/myevents.html.erb
+++ b/app/views/users/myevents.html.erb
@@ -24,18 +24,18 @@
   </thead>
 
   <tbody>
-    <% @event_events.each do |event_event| %>
-      <tr>
-        <td><%= event_event.start_day %></td>
-        <td><%= event_event.end_day %></td>
-        <td><%= event_event.title %></td>
-        <td><%= event_event.description %></td>
-        <td><%= event_event.user_id %></td>
-        <td><%= event_event.aproved %></td>
-        <td><%= link_to 'Show', event_event %></td>
-        <td><%= link_to 'Edit', edit_event_event_path(event_event) %></td>
-        <td><%= link_to 'Destroy', event_event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <% @my_events.each do |event_event| %>
+        <tr>
+          <td><%= event_event.start_day %></td>
+          <td><%= event_event.end_day %></td>
+          <td><%= event_event.title %></td>
+          <td><%= event_event.description %></td>
+          <td><%= event_event.user_id %></td>
+          <td><%= event_event.aproved %></td>
+          <td><%= link_to 'Show', event_event %></td>
+          <td><%= link_to 'Edit', edit_event_event_path(event_event) %></td>
+          <td><%= link_to 'Destroy', event_event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
     <% end %>
   </tbody>
 </table>
