--- a/app/views/admin/ads/show.html.erb
+++ b/app/views/admin/ads/show.html.erb
@@ -72,5 +72,5 @@
 <% end %>
 
 
-<%= link_to 'Editar', edit_admin_ad_path(@ad) %> |
+<% link_to 'Editar', edit_admin_ad_path(@ad) %> |
 <%= link_to 'Voltar', admin_ads_path %>
