--- a/app/views/admin/event/events/index.html.erb
+++ b/app/views/admin/event/events/index.html.erb
@@ -1,7 +1,7 @@
 <section class="panel">
   <header class="panel-heading"><h1>Lista de Eventos</h1><h5><%= @event_events.count %> Eventos</h5> 
   <div class="newItemLink">
-    <i class="fa fa-plus-circle"></i><%= link_to ' Novo Evento', new_admin_event_event_path %>
+    <!--i class="fa fa-plus-circle"></i--><%# link_to ' Novo Evento', new_admin_event_event_path %>
   </div>
 
 
@@ -43,4 +43,4 @@
 </div>
 </section>
 
-<i class="fa fa-plus-circle"></i><%= link_to ' Novo Evento', new_admin_event_event_path %>
+<!--i class="fa fa-plus-circle"></i--><%# link_to ' Novo Evento', new_admin_event_event_path %>
