--- a/app/views/admin/academy/questions/index.html.erb
+++ b/app/views/admin/academy/questions/index.html.erb
@@ -3,7 +3,7 @@
 <section class="panel">
   <header class="panel-heading"><h1>Lista de Perguntas</h1><h5><%= @admin_academy_questions.count %> Perguntas</h5> 
   <div class="newItemLink">
-<i class="fa fa-plus-circle"></i><%= link_to ' Nova pergunta', new_admin_academy_question_path %>
+<!--i class="fa fa-plus-circle"></i--><%# link_to ' Nova pergunta', new_admin_academy_question_path %>
   </div>
   </header>
 
@@ -42,8 +42,8 @@
     </td>
     <td><%= admin_academy_question.answers.count %></td>
     <td><%= admin_academy_question.created_at %></td>
-    <td><%= link_to 'Ver', admin_academy_question %></td>
-    <td><%= link_to 'Editar', edit_admin_academy_question_path(admin_academy_question) %></td>
+    <td><%= link_to 'Ver', admin_academy_question, :target => '_blank' %></td>
+    <td><%# link_to 'Editar', edit_admin_academy_question_path(admin_academy_question) %></td>
     <td><%= link_to 'Apagar', admin_academy_question, method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
   </tr>
   <% end %>
@@ -53,6 +53,6 @@
 </div>
 </section>
 
-<i class="fa fa-plus-circle"></i><%= link_to ' Nova pergunta', new_admin_academy_question_path %>
+<!--i class="fa fa-plus-circle"></i--><%# link_to ' Nova pergunta', new_admin_academy_question_path %>
 
 
