--- a/app/views/admin/cities/index.html.erb
+++ b/app/views/admin/cities/index.html.erb
@@ -12,9 +12,9 @@
       <thead>
         <tr>
           <th>Cidade</th>
-          <th>Qt de Anúncios</th>
-          <th>Qt de Utilizadores</th>
-          <th>Qt de Eventos</th>
+          <th>Anúncios</th>
+          <th>Utilizadores</th>
+          <th>Eventos</th>
 
           <!--th></th-->
           <th></th>
@@ -31,7 +31,7 @@
           <td></td>
 
           <!--td><%#city.country_id %></td-->
-          <!--td><%= link_to 'Ver', [:admin,city] %></td-->
+          <td><%# link_to 'Ver', [:admin,city] %></td>
           <td><%= link_to 'Editar', edit_admin_city_path(city) %></td>
           <td><%= link_to 'Eliminar', [:admin,city], method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
         </tr>
