--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,7 +1,7 @@
 <section class="panel">
   <header class="panel-heading"><h1>Lista de utilizadores</h1><h5><%= @admin_users.count %> Utilizadores</h5> 
     <div class="newItemLink">
-    <i class="fa fa-plus-circle"></i><%= link_to ' Novo Utilizador', new_admin_user_path %>
+    <!--i class="fa fa-plus-circle"></i--><%# link_to ' Novo Utilizador', new_admin_user_path %>
   </div>
   </header>
 <div class="table-responsive">
@@ -16,7 +16,7 @@
       <th>Anúncios</th>
       <th>Tipo</th>
       <th></th>
-      <th></th>
+      <!--th></th-->
       <th></th>
     </tr>
   </thead>
@@ -32,7 +32,7 @@
         <td><%= user.ads.count %></td>
         <% if user.user_type==2 %><td>Admin</td><% else %><td>User</td><% end %>
         <td><%= link_to 'Ver', admin_user_path(user) %></td>
-        <td><%= link_to 'Editar', edit_admin_user_path(user) %></td>
+        <!--td><%# link_to 'Editar', edit_admin_user_path(user) %></td-->
         <td><%= link_to 'Eliminar', admin_user_path(user), method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
       </tr>
     <% end %>
@@ -41,6 +41,6 @@
 <br>
 </div>
 </section>
-    <i class="fa fa-plus-circle"></i><%= link_to ' Novo Utilizador', new_admin_user_path %>
+    <!--i class="fa fa-plus-circle"></i--><%# link_to ' Novo Utilizador', new_admin_user_path %>
 
 
