[Update Feature] Aproved Events

--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -43,7 +43,7 @@
                     <td class="col-sm-6 col-md-10">
                       <div class="media">
 
-                         <%= link_to (image_tag academy_question.user.avatar.url(:medium), :width => '50', :height => '50',:class => "img-circlethumbnail pull-left"), academy_question.user %>
+                         <%= link_to (image_tag academy_question.user.avatar.url(:medium), :width => '50', :height => '50',:class => "img-circle pull-left"), academy_question.user %>
                         </a>
                         <div class="media-body" style="padding:10px;"> 
                           <h4 class="media-heading">
