--- a/app/views/event/events/index.html.erb
+++ b/app/views/event/events/index.html.erb
@@ -17,15 +17,16 @@
                    class="img-rounded img-responsive" />
             </div>
             <div class="col-xs-9 col-md-9 section-box">
-              <%= link_to event_event.title, event_event, class:"h2" %>
+              <%= link_to event_event.title, event_event, class:"h2 url" %>
               <div style="float:right"><%= link_to 'Editar', edit_event_event_path(event_event) %> <%= link_to 'Eliminar', event_event, method: :delete, data: { confirm: 'Are you sure?' } %> </div>
               <p><%= event_event.description %></p>
               <hr />
               <div class="row rating-desc">
                 <div class="col-md-12">
-                  <span class="fa fa-calendar"></span><%= event_event.start_day%>
+                  <span class="fa fa-calendar"></span><%=event_event.start_day.day %>/<%=event_event.start_day.mon %>/<%=event_event.start_day.year %>
                   <span class="separator">|</span>
-                  <span class="fa fa-calendar"></span><%= event_event.end_day %>
+                  <span class="fa fa-calendar"></span>
+                  <span class="fa fa-calendar"></span><%=event_event.end_day.day %>/<%=event_event.end_day.mon %>/<%=event_event.end_day.year %>
                 </div>
               </div>
             </div>
