--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -20,7 +20,12 @@
   </div>
   <p id="loading" style="visibility: hidden">A buscar mais anuncios</p>
 
-<% #= will_paginate @products %>
-
-
+<div href="<%= ads_path(:page => @ads.next_page)%>" class='load-more-ads'>
+  <% if @ads.next_page %>
+    A buscar mais anuncios
+  <% else %>
+    Não existe mais anuncios
+  <% end %>
+</div>
+<% #= link_to 'Load More Ads', ads_path(:page => @ads.next_page), :class => 'load-more-ads', :remote => true if @ads.next_page %>
 
